// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel injectGlobal extract injectGlobal assign to variable 1`] = `
"import \\"./inject-global.test.emotion.css\\";

const thisWillBeUndefined = undefined;"
`;

exports[`babel injectGlobal extract injectGlobal assign to variable 2`] = `
"body {
            margin: 0;
            padding: 0;
          }
body > div {
            display: none;
}
html {
            background: green;
          }"
`;

exports[`babel injectGlobal extract injectGlobal basic 1`] = `"import \\"./inject-global.test.emotion.css\\";"`;

exports[`babel injectGlobal extract injectGlobal basic 2`] = `
"body {
            margin: 0;
            padding: 0;
          }
body > div {
            display: none;
}
html {
            background: green;
          }"
`;

exports[`babel injectGlobal extract injectGlobal with interpolation 1`] = `
"
injectGlobal([\`body {
            margin: 0;
            padding: 0;
            display: \${display};
          }\`, \`body > div {
            display: none;
}\`, \`html {
            background: green;
          }\`]);"
`;

exports[`babel injectGlobal inline injectGlobal basic 1`] = `
"
injectGlobal([\`body {
            margin: 0;
            padding: 0;
          }\`, \`body > div {
            display: none;
}\`, \`html {
            background: green;
          }\`]);"
`;

exports[`babel injectGlobal inline injectGlobal with interpolation 1`] = `
"
injectGlobal([\`body {
            margin: 0;
            padding: 0;
            display: \${display};
          }\`, \`body > div {
            display: none;
}\`, \`html {
            background: green;
          }\`]);"
`;
